# operations-research

./: README.md  pyproject.toml
examples/: ex1.py
examples/productmix/: desk_table.py  desk_table_compact.py
