[tool.poetry]
name = "operations-research"
version = "0.1.0"
description = "practice solving OR problems"
authors = ["Avaré Stewart <avare.stewart@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
ortools = "^9.0.9048"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
